[gd_scene load_steps=2 format=3 uid="uid://dra4wvxw2l5v4"]

[ext_resource type="Script" uid="uid://cxi7nmmh6pcnk" path="res://scenes/global/main_menu.gd" id="1_ekxnf"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -672.0
offset_top = -448.0
offset_right = -672.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ekxnf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -122.5
offset_right = 124.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Iniciar Jogo"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
